<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/teoria_ege"
            android:title="@string/menu_teoria" />
        <item
            android:id="@+id/practik_ege"
            android:title="@string/menu_practic" />
        <item
            android:id="@+id/nav_infopredmet"
            android:title="@string/menu_infopredmet" />
        <item
            android:id="@+id/nav_information"
            android:title="@string/menu_information" />
    </group>
</menu>