<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="play.school.myegehelper100ball.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_dostig"
        android:name="play.school.myegehelper100ball.ui.dostig.dostig"
        android:label="@string/menu_dostig"
        tools:layout="@layout/fragment_dostig"/>
    <fragment
        android:id="@+id/nav_information"
        android:name="play.school.myegehelper100ball.ui.dostig.Information"
        android:label="@string/menu_information"
        tools:layout="@layout/fragment_information"/>
    <fragment
        android:id="@+id/nav_infopredmet"
        android:name="play.school.myegehelper100ball.ui.info_predmet.Info_predmet_ege"
        android:label="@string/menu_information"
        tools:layout="@layout/fragment_info_predmet_ege"/>
    <fragment
        android:id="@+id/teoria_ege"
        android:name="play.school.myegehelper100ball.ui.teoria.Teoria_Ege"
        android:label="@string/menu_teoria"
        tools:layout="@layout/fragment_teoria__ege"/>
    <fragment
        android:id="@+id/practik_ege"
        android:name="play.school.myegehelper100ball.ui.practik.Practik_ege"
        android:label="@string/menu_practic"
        tools:layout="@layout/fragment_practik__ege"/>
    <fragment
        android:id="@+id/info_predmet_ege"
        android:name="play.school.myegehelper100ball.ui.info_predmet.Info_predmet_ege"
        android:label="@string/menu_infopredmet"
        tools:layout="@layout/fragment_info_predmet_ege"/>
    <fragment
        android:id="@+id/math_ege_teoria"
        android:name="play.school.myegehelper100ball.ui.egepredmet.Ege_math_tema"
        android:label="@string/teoria_math"
        tools:layout="@layout/fragment_ege_math_tema"/>
    <fragment
        android:id="@+id/rus_ege_teoria"
        android:name="play.school.myegehelper100ball.ui.egepredmet.Ege_rus_tema"
        android:label="@string/teoria_rus"
        tools:layout="@layout/fragment_ege_rus_tema"/>

    <fragment
        android:id="@+id/ege_varianti_choosing"
        android:name="play.school.myegehelper100ball.Ege_Varianti_Choosing"
        android:label="@string/variant"
        tools:layout="@layout/fragment_ege__varianti__choosing"/>
    <fragment
        android:id="@+id/variant"
        android:name="play.school.myegehelper100ball.Varianti"
        android:label="@string/variant"
        tools:layout="@layout/fragment_varianti"/>
    <fragment
        android:id="@+id/resultat"
        android:name="play.school.myegehelper100ball.Resultat"
        android:label="@string/resultat"
        tools:layout="@layout/fragment_resultat"/>
    <fragment
        android:id="@+id/info_predmet_slide"
        android:name="play.school.myegehelper100ball.Info_ege_predmet_slide"
        android:label="@string/menu_infopredmet"
        tools:layout="@layout/fragment_info_ege_predmet_slide"/>
    <fragment
        android:id="@+id/teoria_slide"
        android:name="play.school.myegehelper100ball.Teoria_slide"
        android:label="@string/menu_teoria"
        tools:layout="@layout/fragment_teoria_slide"/>
    <fragment
        android:id="@+id/bio_ege_tema"
        android:name="play.school.myegehelper100ball.ui.egepredmet.Ege_bio_tema"
        android:label="@string/teoria_bio"
        tools:layout="@layout/fragment_ege_bio_tema"/>
    <fragment
        android:id="@+id/him_ege_tema"
        android:name="play.school.myegehelper100ball.ui.egepredmet.Ege_him_tema"
        android:label="@string/teoria_him"
        tools:layout="@layout/fragment_ege_him_tema"/>
    <fragment
        android:id="@+id/obsestvo_ege_tema"
        android:name="play.school.myegehelper100ball.ui.egepredmet.Ege_obsestvo_tema"
        android:label="@string/teoria_obsestvo"
        tools:layout="@layout/fragment_ege_obsestvo_tema"/>
    <fragment
        android:id="@+id/fis_ege_tema"
        android:name="play.school.myegehelper100ball.ui.egepredmet.Ege_fisics_tema"
        android:label="@string/teoria_fis"
        tools:layout="@layout/fragment_ege_fisics_tema"/>



</navigation>